k8s/base/question-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-svc
  labels:
    app: question-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: question-svc
