k8s/base/question-svc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: question-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: INGRESS_HOST  # Will be replaced by overlay (api.helios or api-staging.helios)
      http:
        paths:
          - path: /api/questions
            pathType: Prefix
            backend:
              service:
                name: question-svc
                port:
                  number: 8080
